integration/main/default/objects/Callout_Configuration__mdt/Callout_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata type for storing HTTP callout configurations used by CalloutManager.</description>
    <label>Callout Configuration</label>
    <pluralLabel>Callout Configurations</pluralLabel>
</CustomObject>