integration/main/default/objects/Callout_Configuration__mdt/fields/Accept__c.field-meta.xml
<CustomField>
    <fullName>Accept__c</fullName>
    <label>Accept</label>
    <description>The Accept header value for the request.</description>
    <inlineHelpText>Accept header (e.g., application/json, application/xml).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>