integration/main/default/objects/Callout_Configuration__mdt/fields/Client_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Client_Certificate__c</fullName>
    <description>The name of the client certificate for mutual SSL authentication.</description>
    <inlineHelpText>The name of the client certificate for mutual SSL authentication.</inlineHelpText>
    <label>Client Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>