integration/main/default/objects/Callout_Configuration__mdt/fields/Compressed__c.field-meta.xml
<CustomField>
    <fullName>Compressed__c</fullName>
    <label>Compressed</label>
    <description>Whether to enable GZIP compression for the request.</description>
    <inlineHelpText>Enable GZIP compression for the HTTP request.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>