integration/main/default/objects/Callout_Configuration__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <description>The Content-Type header value for the request.</description>
    <inlineHelpText>Content-Type header (e.g., application/json, application/xml).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>