integration/main/default/objects/Callout_Configuration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Captures description or notes about the callout.</description>
    <inlineHelpText>Captures description or notes about the callout.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>