integration/main/default/objects/Callout_Configuration__mdt/fields/Encode_Query_Params__c.field-meta.xml
<CustomField>
    <fullName>Encode_Query_Params__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, query params are encoded with the UTF-8 charset.</description>
    <inlineHelpText>When checked, query params are encoded with the UTF-8 charset.</inlineHelpText>
    <label>Encode Query Params</label>
    <type>Checkbox</type>
</CustomField>