integration/main/default/objects/Callout_Configuration__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The endpoint URL or path for the HTTP callout. Should not include named credential.</description>
    <inlineHelpText>The endpoint URL or path for the HTTP callout. Should not include named credential.</inlineHelpText>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>