integration/main/default/objects/Callout_Configuration__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <description>The developer name of the Named Credential to use for authentication.</description>
    <inlineHelpText>Developer name of the Named Credential (e.g., MyAPICredential).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>