integration/main/default/objects/Callout_Configuration__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <label>Timeout</label>
    <description>The timeout in milliseconds for the HTTP callout.</description>
    <inlineHelpText>Timeout in milliseconds (max 120000 = 120 seconds).</inlineHelpText>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>