integration/main/default/objects/Callout_Configuration__mdt/validationRules/Invalid_Timeout_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Timeout_Value</fullName>
    <active>true</active>
    <description>Enforces a valid request timeout value.</description>
    <errorConditionFormula>OR(Timeout__c &gt; 120000, Timeout__c &lt; 1)</errorConditionFormula>
    <errorDisplayField>Timeout__c</errorDisplayField>
    <errorMessage>Timeout must be a value from 1 - 120000 (inclusive)</errorMessage>
</ValidationRule>